[package]
name = "ipaddress"
description = "an library to handle ipv4 and ipv6 numbers"
readme = "../README.md"
documentation = "https://docs.rs/ipaddress/0.1.1/ipaddress/"
homepage = "https://github.com/mabels/ipaddress"
repository = "https://github.com/mabels/ipaddress.git"
keywords = ["ip","network"]
license = "MIT"
version = "0.1.3"
authors = ["Meno Abels <meno.abels@adviser.com>"]

[dependencies]
num = "0.4.0"
num-traits = "0.2.15"
num-integer = "0.1.45"
regex = "1.7.3"
libc = "0.2.141"
lazy_static = "1.4.0"
